[package]
name = "universal_pug"
version = "0.1.0"
authors = ["Lucas Bäckvall <lucas.backvall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8"
itertools = "0.9.0"